deployment-hello-world.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world-web
  namespace: hello-world
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-world-web
  template:
    metadata:
      labels:
        app: hello-world-web
    spec:
      containers:
      - env:
        - name: service_name
          value: hello-world-web
        image: f5devcentral/f5-hello-world:latest
        imagePullPolicy: IfNotPresent
        name: hello-world-web
        ports:
        - containerPort: 8080
          protocol: TCP
