service-hello-world.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-web
  namespace: hello-world
  labels:
    app: hello-world-web
spec:
  ports:
  - name: hello-world-web
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: hello-world-web
