ingress-hello-world.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-web
  namespace: hello-world
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-issuer
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: hello.world.sportal365.dev
    http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: hello-world-web
              port:
                number: 8080

  tls:
  - hosts:
    - hello.world.sportal365.dev
    secretName: account-key-staging2
