ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: hello-world
  name: my-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-issuer
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: hello.world.sportal365.dev
      http:
        paths:
        - path: /greet-the-world
          pathType: Exact
          backend:
            service:
              name: hello-service
              port:
                number: 60000
        - path: /greet-kubernetes
          pathType: Exact
          backend:
            service:
              name: hello-service
              port:
                number: 60001
  tls:
  - hosts:
    - hello.world.sportal365.dev
    secretName: account-key-staging
